tests/dataset/tpc-ds/compiler/cpp/q91.error
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:90:8: error: redefinition of ‘struct CallCenter’
   90 | struct CallCenter {
      |        ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:54:8: note: previous definition of ‘struct CallCenter’
   54 | struct CallCenter {
      |        ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:96:8: error: redefinition of ‘struct CatalogReturn’
   96 | struct CatalogReturn {
      |        ^~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:60:8: note: previous definition of ‘struct CatalogReturn’
   60 | struct CatalogReturn {
      |        ^~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:102:8: error: redefinition of ‘struct DateDim’
  102 | struct DateDim {
      |        ^~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:66:8: note: previous definition of ‘struct DateDim’
   66 | struct DateDim {
      |        ^~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:107:8: error: redefinition of ‘struct Customer’
  107 | struct Customer {
      |        ^~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:71:8: note: previous definition of ‘struct Customer’
   71 | struct Customer {
      |        ^~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:127:12: error: ‘cc’ was not declared in this scope
  127 |   decltype(cc.cc_call_center_id) id;
      |            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:127:12: error: ‘cc’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:128:12: error: ‘cc’ was not declared in this scope
  128 |   decltype(cc.cc_name) name;
      |            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:128:12: error: ‘cc’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:129:12: error: ‘cc’ was not declared in this scope
  129 |   decltype(cc.cc_manager) mgr;
      |            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:129:12: error: ‘cc’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:132:12: error: ‘cc’ was not declared in this scope
  132 |   decltype(cc) cc;
      |            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:132:12: error: ‘cc’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:133:12: error: ‘cr’ was not declared in this scope; did you mean ‘cc’?
  133 |   decltype(cr) cr;
      |            ^~
      |            cc
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:133:12: error: ‘cr’ was not declared in this scope; did you mean ‘cc’?
  133 |   decltype(cr) cr;
      |            ^~
      |            cc
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:134:12: error: ‘d’ was not declared in this scope
  134 |   decltype(d) d;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:134:12: error: ‘d’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:135:12: error: ‘c’ was not declared in this scope
  135 |   decltype(c) c;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:135:12: error: ‘c’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:136:12: error: ‘cd’ was not declared in this scope; did you mean ‘c’?
  136 |   decltype(cd) cd;
      |            ^~
      |            c
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:136:12: error: ‘cd’ was not declared in this scope; did you mean ‘c’?
  136 |   decltype(cd) cd;
      |            ^~
      |            c
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:137:12: error: ‘hd’ was not declared in this scope; did you mean ‘cd’?
  137 |   decltype(hd) hd;
      |            ^~
      |            cd
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:137:12: error: ‘hd’ was not declared in this scope; did you mean ‘cd’?
  137 |   decltype(hd) hd;
      |            ^~
      |            cd
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:138:12: error: ‘ca’ was not declared in this scope; did you mean ‘cd’?
  138 |   decltype(ca) ca;
      |            ^~
      |            cd
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:138:12: error: ‘ca’ was not declared in this scope; did you mean ‘cd’?
  138 |   decltype(ca) ca;
      |            ^~
      |            cd
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:320:13: error: redefinition of ‘void __json(const Customer&)’
  320 | inline void __json(const Customer &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:225:13: note: ‘void __json(const Customer&)’ previously defined here
  225 | inline void __json(const Customer &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:360:13: error: redefinition of ‘void __json(const CallCenter&)’
  360 | inline void __json(const CallCenter &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:150:13: note: ‘void __json(const CallCenter&)’ previously defined here
  150 | inline void __json(const CallCenter &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:405:13: error: redefinition of ‘void __json(const CatalogReturn&)’
  405 | inline void __json(const CatalogReturn &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:200:13: note: ‘void __json(const CatalogReturn&)’ previously defined here
  200 | inline void __json(const CatalogReturn &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:430:13: error: redefinition of ‘void __json(const DateDim&)’
  430 | inline void __json(const DateDim &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:285:13: note: ‘void __json(const DateDim&)’ previously defined here
  285 | inline void __json(const DateDim &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:565:33: error: cannot convert ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to ‘int’ in initialization
  565 |                       Result{cc.cc_call_center_id, cc.cc_name, cc.cc_manager};
      |                              ~~~^~~~~~~~~~~~~~~~~
      |                                 |
      |                                 std::string {aka std::__cxx11::basic_string<char>}
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:569:53: error: cannot convert ‘CallCenter’ to ‘int’ in initialization
  569 |                       __g.items.push_back(__struct9{cc, cr, d, c, cd, hd, ca});
      |                                                     ^~
      |                                                     |
      |                                                     CallCenter
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:577:47: error: cannot convert ‘CallCenter’ to ‘int’ in initialization
  577 |                                               cc, cr, d, c, cd, hd, ca}}});
      |                                               ^~
      |                                               |
      |                                               CallCenter
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:577:72: error: no matching function for call to ‘std::vector<__struct9>::vector(<brace-enclosed initializer list>)’
  577 |                                               cc, cr, d, c, cd, hd, ca}}});
      |                                                                        ^
In file included from /usr/include/c++/13/vector:66,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:7:
/usr/include/c++/13/bits/stl_vector.h:707:9: note: candidate: ‘template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with <template-parameter-2-2> = _InputIterator; _Tp = __struct9; _Alloc = std::allocator<__struct9>]’
  707 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:707:9: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_vector.h:678:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = __struct9; _Alloc = std::allocator<__struct9>; allocator_type = std::allocator<__struct9>]’
  678 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:678:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:659:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct9; _Alloc = std::allocator<__struct9>; std::__type_identity_t<_Alloc> = std::allocator<__struct9>]’
  659 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:659:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:640:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = __struct9; _Alloc = std::allocator<__struct9>; allocator_type = std::allocator<__struct9>; std::false_type = std::integral_constant<bool, false>]’
  640 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:640:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:635:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = __struct9; _Alloc = std::allocator<__struct9>; allocator_type = std::allocator<__struct9>; std::true_type = std::integral_constant<bool, true>]’
  635 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:635:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:624:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct9; _Alloc = std::allocator<__struct9>; std::__type_identity_t<_Alloc> = std::allocator<__struct9>]’
  624 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:624:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:620:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = __struct9; _Alloc = std::allocator<__struct9>]’
  620 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:620:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:601:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = __struct9; _Alloc = std::allocator<__struct9>]’
  601 |       vector(const vector& __x)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:601:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:569:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const value_type&, const allocator_type&) [with _Tp = __struct9; _Alloc = std::allocator<__struct9>; size_type = long unsigned int; value_type = std::vector<__struct9>::value_type; allocator_type = std::allocator<__struct9>]’
  569 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:569:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:556:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = __struct9; _Alloc = std::allocator<__struct9>; size_type = long unsigned int; allocator_type = std::allocator<__struct9>]’
  556 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:556:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:542:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = __struct9; _Alloc = std::allocator<__struct9>; allocator_type = std::allocator<__struct9>]’
  542 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:542:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:531:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = __struct9; _Alloc = std::allocator<__struct9>]’
  531 |       vector() = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:531:7: note:   candidate expects 0 arguments, 1 provided
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:592:60: error: ‘struct __struct9’ has no member named ‘cr_net_loss’
  592 |             std::vector<decltype(std::declval<__struct9>().cr_net_loss)>
      |                                                            ^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:592:60: error: ‘struct __struct9’ has no member named ‘cr_net_loss’
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:592:72: error: template argument 1 is invalid
  592 |             std::vector<decltype(std::declval<__struct9>().cr_net_loss)>
      |                                                                        ^
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:592:72: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:595:23: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  595 |               __items.push_back(x.cr_net_loss);
      |                       ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:595:35: error: ‘struct __struct9’ has no member named ‘cr_net_loss’
  595 |               __items.push_back(x.cr_net_loss);
      |                                   ^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:1)> [with auto:1 = int]’:
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:591:13:   required from here
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:590:38: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  590 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |                                    ~~^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:590:49: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  590 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |                                               ~~^~~
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq913489096218/001/prog.cpp:536:35: error: ‘first’ was not declared in this scope
  536 |   std::vector<__struct9> result = first(([&]() {
      |                                   ^~~~~
